# binaryeditorbz

./: .gitattributes  .gitignore  BzFaq.md  Cmos.h  Download.md  HowToUse.md  ProjectHome.md  README.md  SPECIALTHANKS.txt
Bz/: AboutDlg.h  BZ.clw  BZ.rc  BZAnalyzerView.cpp  BZAnalyzerView.h  BZAnalyzerView.wtl.cpp  BZAnalyzerView.wtl.h  BZBmpVw.cpp  BZBmpVw.h  BZBmpVw.mfc.h  BZBmpVw2.cpp  BZBmpVw2.h  BZCoreData.cpp  BZCoreData.h  BZDoc.cpp  BZDoc.cpp.bak  BZDoc.h  BZDoc2.cpp  BZDoc2.h  BZDpi.cpp  BZDpi.h  BZFormVw.cpp  BZFormVw.h  BZInspectView.cpp  BZInspectView.h  BZOption.cpp  BZOption.h  BZSubView.h  BZView.cpp  BZView.h  BZres_us.cpp  BZres_us.dsp  BZres_us.rc  BZres_us.vcproj  BZres_us.vcxproj  BZres_us.vcxproj.filters  Bz.cpp  Bz.dsp  Bz.dsw  Bz.h  (+73 more)
Bz/DEBUGMap/: mapbz190.7z  mapbz191.7z  mapbz192.7z
Bz/NSIS/: setup.nsi
Bz/NSIS/data/: BZ.HLP  Bz.GID  Bz.def  Bz.txt  EBCDIC.def  SPECIALTHANKS.txt
Bz/SuperFileConTest/: SuperFileConTest.sln
Bz/SuperFileConTest/SuperFileConTest/: SuperFileConTest.cpp  SuperFileConTest.vcproj
Bz/TamaScrl64Example/TamaScrl64Test/: MainFrm.h  TamaScrl64Test.cpp  TamaScrl64Test.vcproj  resource.h  stdafx.cpp  stdafx.h
Bz/TamaScrl64Test/: TamaScrl64Test.sln
Bz/TamaScrl64Test/TamaScrl64Test/: TamaScrl64Test.h  TamaScrl64Test.rc  (+2 more)
Bz/chm/: alias.h  bz.chm  bz.chw  bz.hhp  toc.hhc  topics.h
Bz/hlp/: ADDRNOTE.HLP  BZ.rtf  BZ0.rtf  BZ1.rtf  BZ154.rtf  BZDOC.TXT  bz.hpj
Bz/htm/: basic.htm  filemap.htm  findbox.htm  high.htm  inspector.htm  license.htm  list.htm  splitview.htm
Bz/res/: BZ.rc2  bmppoint - コピー (2).cur  bmppoint.cur
Bz/tools/: version-memo.txt
(+59 files in other folders)
